// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/monitoring/requestpanel/request > should render 1`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in Method"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Method' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#1E1E1E",
                "color": "#9CDCFE",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                GET
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in URI"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'URI' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#1E1E1E",
                "color": "#9CDCFE",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                https://httpbin.org/get
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-121"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-139 ms-DetailsHeader root-123"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone14"
                  data-tabster="{"uncontrolled": {}}"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header13-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header13-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerStart-131"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header13-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header13-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerEnd-132"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-139 focusZone-122"
                    data-focuszone-id="FocusZone15"
                    data-tabster="{"uncontrolled": {}}"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request > should render 2`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in 'Method'"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Select all text in 'Method'"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Method' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Copy the value of 'Method' to the clipboard"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                GET
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in 'URI'"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Select all text in 'URI'"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'URI' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Copy the value of 'URI' to the clipboard"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                https://httpbin.org/get
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-121"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-139 ms-DetailsHeader root-123"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone30"
                  data-tabster="{"uncontrolled": {}}"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header29-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header29-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerStart-131"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header29-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header29-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerEnd-132"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-139 focusZone-122"
                    data-focuszone-id="FocusZone31"
                    data-tabster="{"uncontrolled": {}}"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request > should render a body 1`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in Method"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Method' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#1E1E1E",
                "color": "#9CDCFE",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                POST
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in URI"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'URI' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#1E1E1E",
                "color": "#9CDCFE",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                https://httpbin.org/post
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-121"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-139 ms-DetailsHeader root-123"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone30"
                  data-tabster="{"uncontrolled": {}}"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header29-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header29-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerStart-131"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header29-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header29-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerEnd-132"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-139 focusZone-122"
                    data-focuszone-id="FocusZone31"
                    data-tabster="{"uncontrolled": {}}"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Body
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Body"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in Body"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Body' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#1E1E1E",
                "color": "#9CDCFE",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                {
              </span>
            </div>
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                  "hello": "world!"
              </span>
            </div>
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                }
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request > should render a body 2`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in 'Method'"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Select all text in 'Method'"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Method' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Copy the value of 'Method' to the clipboard"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                POST
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in 'URI'"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Select all text in 'URI'"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'URI' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Copy the value of 'URI' to the clipboard"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                https://httpbin.org/post
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-121"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-139 ms-DetailsHeader root-123"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone68"
                  data-tabster="{"uncontrolled": {}}"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header67-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header67-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerStart-131"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header67-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header67-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerEnd-132"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-139 focusZone-122"
                    data-focuszone-id="FocusZone69"
                    data-tabster="{"uncontrolled": {}}"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Body
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Body"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in 'Body'"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Select all text in 'Body'"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Body' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Copy the value of 'Body' to the clipboard"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                {
              </span>
            </div>
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                  "hello": "world!"
              </span>
            </div>
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                }
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request > should render a body link 1`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in Method"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Method' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#1E1E1E",
                "color": "#9CDCFE",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                POST
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in URI"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'URI' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#1E1E1E",
                "color": "#9CDCFE",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#9CDCFE",
                }
              }
            >
              <span
                className="token plain"
              >
                https://httpbin.org/post
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-121"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-139 ms-DetailsHeader root-123"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone52"
                  data-tabster="{"uncontrolled": {}}"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header51-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header51-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerStart-131"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header51-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header51-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerEnd-132"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-139 focusZone-122"
                    data-focuszone-id="FocusZone53"
                    data-tabster="{"uncontrolled": {}}"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Body
      </label>
      <div
        className="msla-trace-value-text"
      >
        <a
          aria-label="Alt/Option + click to download 'Body'"
          className="ms-Link root-153"
          href="[REDACTED]"
          onClick={[Function]}
          rel="noopener"
          target="_blank"
        >
          Download (Alt or Option + select)
        </a>
      </div>
    </section>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request > should render a body link 2`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in 'Method'"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Select all text in 'Method'"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'Method' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Copy the value of 'Method' to the clipboard"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                POST
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <div
            className="buttons"
          >
            <button
              aria-label="Select all text in 'URI'"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Select all text in 'URI'"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
                  data-icon-name="SelectAll"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-1"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
            <button
              aria-label="Copy the value of 'URI' to the clipboard"
              className="ms-Button ms-Button--icon root-109"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Copy the value of 'URI' to the clipboard"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-110"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
                  data-icon-name="Copy"
                  style={
                    {
                      "fontFamily": ""FabricMDL2Icons-2"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <pre
            className="prism-code language-json"
            style={
              {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                https://httpbin.org/post
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-121"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-139 ms-DetailsHeader root-123"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone106"
                  data-tabster="{"uncontrolled": {}}"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header105-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header105-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerStart-131"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-140"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-148"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-146"
                        id="header105-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-147"
                          id="header105-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-130 cellSizerEnd-132"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-139 focusZone-122"
                    data-focuszone-id="FocusZone107"
                    data-tabster="{"uncontrolled": {}}"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Body
      </label>
      <div
        className="msla-trace-value-text"
      >
        <a
          aria-label="Alt/Option + click to download 'Body'"
          className="ms-Link root-153"
          href="[REDACTED]"
          onClick={[Function]}
          rel="noopener"
          target="_blank"
        >
          Download (Alt or Option + select)
        </a>
      </div>
    </section>
  </div>
</div>
`;
